Update AutoTask for General Autolization

--- a/config.json
+++ b/config.json
@@ -1,26 +1,45 @@
 {
   "ip_dict": {
-    "172.16.227.32": "10-zhxg-172_16_227_32",
-    "172.16.212.171": "11-zhxg-172_16_212_171",
-    "172.16.209.72": "12-zhxg-172_16_209_72",
-    "172.16.42.55": "1-zhxg-172_16_42_55",
-    "172.16.204.10": "13-zhxg-172_16_204_10"
-  },    
-  "domain": "http://172.16.162.64:8002",
+    "192.168.124.15": "3-3001-192_168_124_18",
+    "192.168.124.17": "3-3001-192_168_124_17",
+    "192.168.124.18": "2-3001-192_168_124_18",
+    "192.168.124.19": "4-3001-192_168_124_19",
+    "192.168.124.60": "8-3001-192_168_124_60",
+    "192.168.124.23": "6-3001-192_168_124_23",
+    "192.168.124.26": "5-3001-192_168_124_26",
+    "192.168.124.68": "9-3001-192_168_124_68"
+  },
+  "domain": "http://192.168.124.5:8002",
   "image": "registry.cn-guangzhou.aliyuncs.com/mytos/dobox:Q12_base_202510101731",
-  "host_local": "172.16.162.64:5000",
-  "ip": "172.16.204.10",
-  "host_rpc": "36.133.80.179:7152/zhxg-MYTSDK",
+  "host_local": "192.168.124.5:5000",
+  "host_rpc": "36.133.80.179:7152/3001-MYTSDK",
+  "ip": "192.168.124.19",
   "redis_url": "redis://zjl:hZohdCUneLEo@192.168.223.202:6386/2",
   "update_account_url": "http://192.168.223.144:9000/android/updateAccountHeaders/",
   "info_list": [
-    ["5812410995", 1, "", ""],
-    ["5812702393", 3, "", ""],
-    ["5812702608", 4, "", ""],
-    ["5812702654", 5, "", ""],
-    ["5812702967", 6, "", ""],
-    ["5812722267", 7, "", ""],
-    ["6134686023", 8, "", ""]
+    [
+      "4376663538",
+      1,
+      "",
+      ""
+    ],
+    [
+      "4508371242",
+      3,
+      "",
+      ""
+    ],
+    [
+      "5797683260",
+      4,
+      "",
+      ""
+    ],
+    [
+      "6134686749",
+      2,
+      "",
+      ""
+    ]
   ]
-
 }
