--- a/config.json
+++ b/config.json
@@ -13,15 +13,140 @@
   "image": "registry.cn-guangzhou.aliyuncs.com/mytos/dobox:Q12_base_202510101731",
   "host_local": "192.168.124.5:5000",
   "host_rpc": "36.133.80.179:7152/3001-MYTSDK",
-  "ip": "192.168.124.19",
+  "ip": "192.168.124.26",
   "redis_url": "redis://zjl:hZohdCUneLEo@192.168.223.202:6386/2",
   "update_account_url": "http://192.168.223.144:9000/android/updateAccountHeaders/",
   "info_list": [
-    ["6134686749", 2, "", ""],
-    ["6134687224", 5, "", ""],
-    ["6134687286", 7, "", ""],
-    ["5797683331", 8, "", ""]
-
-  ]
-
+    [
+      "4385542260",
+      5,
+      "",
+      ""
+    ],
+    [
+      "7533333374",
+      4,
+      "",
+      ""
+    ],
+    [
+      "7533333766",
+      8,
+      "",
+      ""
+    ],
+    [
+      "8739703173",
+      3,
+      "",
+      ""
+    ]
+  ],
+  "info_pool": [
+    [
+      "7533333849",
+      1,
+      "",
+      ""
+    ],
+    [
+      "8739703287",
+      1,
+      "",
+      ""
+    ],
+    [
+      "7533333894",
+      2,
+      "",
+      ""
+    ],
+    [
+      "8739703093",
+      2,
+      "",
+      ""
+    ],
+    [
+      "7533333266",
+      2,
+      "",
+      ""
+    ],
+    [
+      "8739703173",
+      3,
+      "",
+      ""
+    ],
+    [
+      "7533333340",
+      3,
+      "",
+      ""
+    ],
+    [
+      "7533333374",
+      4,
+      "",
+      ""
+    ],
+    [
+      "8736786870",
+      4,
+      "",
+      ""
+    ],
+    [
+      "4385542260",
+      5,
+      "",
+      ""
+    ],
+    [
+      "4508371190",
+      5,
+      "",
+      ""
+    ],
+    [
+      "4508371204",
+      6,
+      "",
+      ""
+    ],
+    [
+      "7533332994",
+      6,
+      "",
+      ""
+    ],
+    [
+      "7533333101",
+      7,
+      "",
+      ""
+    ],
+    [
+      "8738018755",
+      7,
+      "",
+      ""
+    ],
+    [
+      "7533333766",
+      8,
+      "",
+      ""
+    ]
+  ],
+  "success_list": [
+    [
+      "5797683331",
+      8,
+      "",
+      ""
+    ]
+  ],
+  "failure_list": []
 }
