--- a/config.json
+++ b/config.json
@@ -1,6 +1,5 @@
 {
   "ip_dict": {
-    "192.168.124.15": "3-3001-192_168_124_18",
     "192.168.124.17": "3-3001-192_168_124_17",
     "192.168.124.18": "2-3001-192_168_124_18",
     "192.168.124.19": "4-3001-192_168_124_19",
@@ -17,136 +16,26 @@
   "redis_url": "redis://zjl:hZohdCUneLEo@192.168.223.202:6386/2",
   "update_account_url": "http://192.168.223.144:9000/android/updateAccountHeaders/",
   "info_list": [
-    [
-      "4385542260",
-      5,
-      "",
-      ""
-    ],
-    [
-      "7533333374",
-      4,
-      "",
-      ""
-    ],
-    [
-      "7533333766",
-      8,
-      "",
-      ""
-    ],
-    [
-      "8739703173",
-      3,
-      "",
-      ""
-    ]
+    ["7533333101", 7, "", ""],
+    ["7533333766", 8, "", ""],
+    ["7533333266", 2, "", ""]
   ],
   "info_pool": [
-    [
-      "7533333849",
-      1,
-      "",
-      ""
-    ],
-    [
-      "8739703287",
-      1,
-      "",
-      ""
-    ],
-    [
-      "7533333894",
-      2,
-      "",
-      ""
-    ],
-    [
-      "8739703093",
-      2,
-      "",
-      ""
-    ],
-    [
-      "7533333266",
-      2,
-      "",
-      ""
-    ],
-    [
-      "8739703173",
-      3,
-      "",
-      ""
-    ],
-    [
-      "7533333340",
-      3,
-      "",
-      ""
-    ],
-    [
-      "7533333374",
-      4,
-      "",
-      ""
-    ],
-    [
-      "8736786870",
-      4,
-      "",
-      ""
-    ],
-    [
-      "4385542260",
-      5,
-      "",
-      ""
-    ],
-    [
-      "4508371190",
-      5,
-      "",
-      ""
-    ],
-    [
-      "4508371204",
-      6,
-      "",
-      ""
-    ],
-    [
-      "7533332994",
-      6,
-      "",
-      ""
-    ],
-    [
-      "7533333101",
-      7,
-      "",
-      ""
-    ],
-    [
-      "8738018755",
-      7,
-      "",
-      ""
-    ],
-    [
-      "7533333766",
-      8,
-      "",
-      ""
-    ]
+
+
+    ["8738018755", 7, "", ""]
+
+
   ],
   "success_list": [
-    [
-      "5797683331",
-      8,
-      "",
-      ""
-    ]
+    ["4165842926", 4, "", ""],
+    ["4386693337", 3, "", ""],
+    ["4386643942", 1, "", ""],
+    ["7533333374", 4, "", ""]
   ],
-  "failure_list": []
+  
+  "failure_list": [
+    ["8736786870", 4, "", ""],
+    ["4385542260", 5, "", ""]
+  ]
 }
