create Multi IP process cowork with kiro Spec Mode

--- a/config.json
+++ b/config.json
@@ -1,41 +1,49 @@
 {
-  "ip_dict": {
-    "192.168.124.17": "3-3001-192_168_124_17",
-    "192.168.124.18": "2-3001-192_168_124_18",
-    "192.168.124.19": "4-3001-192_168_124_19",
-    "192.168.124.60": "8-3001-192_168_124_60",
-    "192.168.124.23": "6-3001-192_168_124_23",
-    "192.168.124.26": "5-3001-192_168_124_26",
-    "192.168.124.68": "9-3001-192_168_124_68"
+  "global": {
+    "domain": "http://192.168.124.5:8002",
+    "image": "registry.cn-guangzhou.aliyuncs.com/mytos/dobox:Q12_base_202510101731",
+    "redis_url": "redis://zjl:hZohdCUneLEo@192.168.223.202:6386/2",
+    "update_account_url": "http://192.168.223.144:9000/android/updateAccountHeaders/",
+    "host_local": "192.168.124.5:5000",
+    "host_rpc": "36.133.80.179:7152/3001-MYTSDK",
+    "ip_dict": {
+      "192.168.124.15": "3-3001-192_168_124_18",
+      "192.168.124.17": "3-3001-192_168_124_17",
+      "192.168.124.18": "2-3001-192_168_124_18",
+      "192.168.124.19": "4-3001-192_168_124_19",
+      "192.168.124.60": "8-3001-192_168_124_60",
+      "192.168.124.23": "6-3001-192_168_124_23",
+      "192.168.124.26": "5-3001-192_168_124_26",
+      "192.168.124.68": "9-3001-192_168_124_68"
+    }
   },
-  "domain": "http://192.168.124.5:8002",
-  "image": "registry.cn-guangzhou.aliyuncs.com/mytos/dobox:Q12_base_202510101731",
-  "host_local": "192.168.124.5:5000",
-  "host_rpc": "36.133.80.179:7152/3001-MYTSDK",
-  "ip": "192.168.124.26",
-  "redis_url": "redis://zjl:hZohdCUneLEo@192.168.223.202:6386/2",
-  "update_account_url": "http://192.168.223.144:9000/android/updateAccountHeaders/",
-  "info_list": [
-    ["7533333101", 7, "", ""],
-    ["7533333766", 8, "", ""],
-    ["7533333266", 2, "", ""]
-  ],
-  "info_pool": [
-
-
-    ["8738018755", 7, "", ""]
-
-
-  ],
-  "success_list": [
-    ["4165842926", 4, "", ""],
-    ["4386693337", 3, "", ""],
-    ["4386643942", 1, "", ""],
-    ["7533333374", 4, "", ""]
-  ],
-  
-  "failure_list": [
-    ["8736786870", 4, "", ""],
-    ["4385542260", 5, "", ""]
-  ]
-}
+  "ips": {
+    "192.168.124.17": {
+      "info_pool": [
+        ["2364180493", "2", "", ""],
+        ["2364180320", "1", "", ""],
+        ["6727221118", "1", "", ""],
+        ["6727221166", "5", "", ""],
+        ["6727221187", "6", "", ""],
+        ["6727221405", "7", "", ""],
+        ["6727221503", "3", "", ""],
+        ["6727221515", "4", "", ""],
+        ["6727221553", "5", "", ""],
+        ["6727221593", "6", "", ""]
+      ],
+      "info_list": [],
+      "success_list": [],
+      "failure_list": []
+    },
+    "192.168.124.18": {
+      "info_pool": [
+        ["4376662009", "7", "", ""],
+        ["4508371395", "1", "", ""],
+        ["4508371422", "2", "", ""]
+      ],
+      "info_list": [],
+      "success_list": [],
+      "failure_list": []
+    }
+  }
+}     
