--- a/config.json
+++ b/config.json
@@ -7,43 +7,143 @@
     "host_local": "192.168.124.5:5000",
     "host_rpc": "36.133.80.179:7152/3001-MYTSDK",
     "ip_dict": {
-      "192.168.124.15": "3-3001-192_168_124_18",
       "192.168.124.17": "3-3001-192_168_124_17",
       "192.168.124.18": "2-3001-192_168_124_18",
       "192.168.124.19": "4-3001-192_168_124_19",
       "192.168.124.60": "8-3001-192_168_124_60",
       "192.168.124.23": "6-3001-192_168_124_23",
       "192.168.124.26": "5-3001-192_168_124_26",
-      "192.168.124.68": "9-3001-192_168_124_68"
+      "192.168.124.68": "9-3001-192_168_124_68",
+      "192.168.124.50": "7-3001-192_168_124_50"
     }
   },
   "ips": {
+    "192.168.124.50": {
+      "info_pool": [
+        ["7533332384", "3", "", ""],
+        ["7533332541", "6", "", ""],
+        ["7533332823", "8", "", ""]
+      ],
+      "info_list": [
+        ["7533332384", "3", "", ""],
+        ["7533332541", "6", "", ""],
+        ["7533332823", "8", "", ""]
+      ],
+      "success_list": [],
+      "failure_list": [
+        ["7533332823", "8", "", ""]
+      ]
+    },
+    "192.168.124.60": {
+      "info_pool": [
+        ["2897544608", "2", "", ""]
+      ],
+      "info_list": [
+        ["2897544608", "2", "", ""]
+      ],
+      "success_list": [],
+      "failure_list": [
+        ["2897544608", "2", "", ""]
+      ]
+    },
+    "192.168.124.68": {
+      "info_pool": [
+        ["4385542539", "2", "", ""],
+        ["4385542523", "1", "", ""],
+        ["4385542638", "3", "", ""],
+        ["5812390644", "3", "", ""],
+        ["5812390810", "4", "", ""]
+      ],
+      "info_list": [
+        ["5812390810", "4", "", ""],
+        ["4385542523", "1", "", ""],
+        ["4385542539", "2", "", ""],
+        ["4385542638", "3", "", ""]
+      ],
+      "success_list": [],
+      "failure_list": [
+        ["4385542638", "3", "", ""],
+        ["5812390810", "4", "", ""],
+        ["4385542539", "2", "", ""],
+        ["4385542523", "1", "", ""]
+      ]
+    },
     "192.168.124.17": {
       "info_pool": [
         ["2364180493", "2", "", ""],
         ["2364180320", "1", "", ""],
+        ["4376662009", "7", "", ""],
+        ["4386088844", "2", "", ""],
         ["6727221118", "1", "", ""],
         ["6727221166", "5", "", ""],
         ["6727221187", "6", "", ""],
-        ["6727221405", "7", "", ""],
         ["6727221503", "3", "", ""],
-        ["6727221515", "4", "", ""],
-        ["6727221553", "5", "", ""],
-        ["6727221593", "6", "", ""]
+        ["6727221593", "6", "", ""],
+        ["6727223389", "8", "", ""],
+        ["6727223406", "4", "", ""]
       ],
+      "info_list": [
+        ["6727221187", "6", "", ""],
+        ["6727223406", "4", "", ""],
+        ["6727221166", "5", "", ""],
+        ["2364180493", "2", "", ""]
+      ],
+      "success_list": [],
+      "failure_list": [
+        ["2364180320", "1", "", ""],
+        ["6727223406", "4", "", ""],
+        ["6727221166", "5", "", ""],
+        ["2364180493", "2", "", ""],
+        ["6727221187", "6", "", ""]
+      ]
+    },
+    "192.168.124.18": {
+      "info_pool": [
+        ["4385542320", "8", "", ""],
+        ["4165842536", "1", "", ""],
+        ["4165842653", "3", "", ""],
+        ["4165842926", "4", "", ""],
+        ["4165842930", "5", "", ""],
+        ["4386643899", "8", "", ""],
+        ["4386643942", "1", "", ""],
+        ["4386692973", "2", "", ""],
+        ["4386693337", "3", "", ""],
+        ["4503433452", "4", "", ""],
+        ["5792620467", "5", "", ""],
+        ["5795804355", "7", "", ""],
+        ["5795807798", "8", "", ""]
+      ],
+      "info_list": [
+        ["5795807798", "8", "", ""]
+      ],
+      "success_list": [],
+      "failure_list": [
+        ["4386692973", "2", "", ""],
+        ["4386693337", "3", "", ""],
+        ["4386643899", "8", "", ""],
+        ["5795807798", "8", "", ""]
+      ]
+    },
+    "192.168.124.19": {
+      "info_pool": [],
       "info_list": [],
       "success_list": [],
       "failure_list": []
     },
-    "192.168.124.18": {
-      "info_pool": [
-        ["4376662009", "7", "", ""],
-        ["4508371395", "1", "", ""],
-        ["4508371422", "2", "", ""]
-      ],
+    "192.168.124.23": {
+      "info_pool": [],
       "info_list": [],
+      "success_list": [],
+      "failure_list": []
+    },
+    "192.168.124.26": {
+      "info_pool": [],
+      "info_list": [
+        ["8736786870", "4", "", ""],
+        ["4385542308", "6", "", ""]
+      ],
       "success_list": [],
       "failure_list": []
     }
   }
-}     
+}
