--- a/config.json
+++ b/config.json
@@ -20,18 +20,25 @@
   "ips": {
     "192.168.124.19": {
       "info_pool": [
-        ["4376663538", "1", "", ""],
-        ["4508371242", "3", "", ""],
         ["5797683178", "1", "", ""],
-        ["5797683260", "4", "", ""],
         ["5797683304", "6", "", ""],
         ["5797683331", "8", "", ""],
-        ["6134686749", "2", "", ""],
         ["6134687322", "8", "", ""]
       ],
-      "info_list": [],
+      "info_list": [
+        ["6134687322", "8", "", ""]
+      ],
       "success_list": [],
-      "failure_list": []
+      "failure_list": [
+        ["4376663538", "1", "", ""],
+        ["5797683260", "4", "", ""],
+        ["6134686749", "2", "", ""],
+        ["4508371242", "3", "", ""],
+        ["5797683331", "8", "", ""],
+        ["5797683304", "6", "", ""],
+        ["5797683178", "1", "", ""],
+        ["6134687322", "8", "", ""]
+      ]
     },
     "192.168.124.68": {
       "info_pool": [
@@ -40,9 +47,15 @@
         ["5812390644", "3", "", ""]
       ],
       "info_list": [
-        ["5812390644", "3", "", ""],
-        ["4385542539", "2", "", ""],
-        ["4385542523", "1", "", ""]
+        ["6727721129","1","http://api.sms28.top/uuid-page/5a72a444862841269a7aef73645c6fc1", ""],
+        ["6727721207","2","http://api.sms28.top/uuid-page/25031e608e33486ebf7067d14b69956a", ""],
+        ["6727721413","3","http://api.sms28.top/uuid-page/09acd4548cba4cd9a1f5de508e05752a", ""],
+        ["6727723468","4","http://api.sms28.top/uuid-page/de43ab2540224ac2bd52dfd7471547c5", ""],
+        ["6727723473","5","http://api.sms28.top/uuid-page/71c710a6cbea441198dbd779917ee70d", ""],
+        ["6727723695","6","http://api.sms28.top/uuid-page/e5704b1281a841b99b1334a44be3b687", ""],
+        ["6727723797","7","http://api.sms28.top/uuid-page/a362f64f29054fb5a00af5d0b480c522", ""],
+        ["6727223721","8","http://api.sms28.top/uuid-page/f4ad0ac578f04febb8be5d6251996e8e", ""]
+
       ],
       "success_list": [],
       "failure_list": [
@@ -72,21 +85,50 @@
     },
     "192.168.124.60": {
       "info_pool": [],
-      "info_list": [],
+      "info_list": [
+        ["6727223693", "2", "http://api.sms28.top/uuid-page/670a036d2db543e0af96c50783b843ac", ""],
+        ["6727223710", "5", "http://api.sms28.top/uuid-page/d7a2b2060e5f44b980336d46697b0d2a", ""],
+        ["6727223784", "7", "http://api.sms28.top/uuid-page/e4445c0ed85349d8bdf99c4622b238c7", ""],
+        ["6727223788", "8", "http://api.sms28.top/uuid-page/83f2141c9f0b43f4910b614afbb35964", ""]
+      ],
       "success_list": [],
-      "failure_list": []
+      "failure_list": [
+        ["6727223639", "1", "http://api.sms28.top/uuid-page/8576c94b8cdb470e9fdd64c737809780", ""],
+        ["6727223693", "2", "http://api.sms28.top/uuid-page/670a036d2db543e0af96c50783b843ac", ""],
+        ["6727223704", "3", "http://api.sms28.top/uuid-page/d4b528149bdd4366b00e11eb5a537f3a", ""]
+      ]
     },
     "192.168.124.17": {
-      "info_pool": [],
-      "info_list": [],
+      "info_pool": [
+        ["2364180320", "1", "", ""],
+        ["4376662009", "7", "", ""],
+        ["6727221118", "1", "", ""],
+        ["6727221187", "6", "", ""]
+      ],
+      "info_list": [
+        ["6727221118", "1", "", ""]
+      ],
       "success_list": [],
-      "failure_list": []
+      "failure_list": [
+        ["6727221187", "6", "", ""],
+        ["2364180320", "1", "", ""],
+        ["4376662009", "7", "", ""],
+        ["6727221118", "1", "", ""]
+      ]
     },
     "192.168.124.18": {
-      "info_pool": [],
-      "info_list": [],
+      "info_pool": [
+        ["4165842536", "1", "", ""],
+        ["4386643942", "1", "", ""]
+      ],
+      "info_list": [
+        ["4386643942", "1", "", ""]
+      ],
       "success_list": [],
-      "failure_list": []
+      "failure_list": [
+        ["4165842536", "1", "", ""],
+        ["4386643942", "1", "", ""]
+      ]
     }
   }
 }
